# rustdeck-core

./: .gitignore  Cargo.toml  README.md  TODO.md  Taskfile.yml  config.json  openapi.yml
common/src/: lib.rs
crates/plugins/rustdeck-media/: Cargo.toml
crates/plugins/rustdeck-media/src/: lib.rs
crates/plugins/rustdeck-obs/: Cargo.toml
crates/plugins/rustdeck-obs/src/: lib.rs
crates/plugins/rustdeck-system/: Cargo.toml
crates/plugins/rustdeck-system/src/: lib.rs
crates/rustdeck/: Cargo.toml
crates/rustdeck-common/: Cargo.toml
crates/rustdeck-common/src/: args.rs  builder.rs  datatype.rs  lib.rs  macros.rs  proto.rs  result.rs  util.rs
crates/rustdeck-core/: Cargo.toml
crates/rustdeck-core/src/: buttons.rs  config.rs  constants.rs  lib.rs  models.rs
crates/rustdeck-core/src/plugins/: datatype.rs  error.rs  loading.rs  plugin.rs  proto.rs  store.rs  util.rs
crates/rustdeck/src/: buttons.rs  config.rs  constants.rs  deck.rs  error.rs  icon_store.rs  main.rs  mock.rs  models.rs
crates/rustdeck/src/plugins/: datatype.rs  error.rs  loading.rs  mod.rs  plugin.rs  plugin_wrapper.rs  proto.rs  safe_arg.rs  store.rs  util.rs
crates/rustdeck/src/server/: http.rs  http_axum.rs  mod.rs
docs/: plugins.md
examples/plugins/sample_c_plugin/: main.c
examples/plugins/sample_plugin/: Cargo.toml
examples/plugins/sample_plugin/src/: lib.rs
examples/rustdeck-server/: Cargo.toml
examples/rustdeck-server/src/: config.rs  main.rs
examples/rustdeck-server/src/server/: http.rs
include/: common.h
loader/src/: error.rs  main.rs  plugin_wrapper.rs
plugin/src/: lib.rs
plugin_c/: common.h  main.c
scripts/: build_c_plugin.ps1  build_media_plugin.ps1  build_media_plugin.sh  package.ps1  test_plugin.ps1
tests/test_resources/: config.json
