[package]
name = "rustdeck-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rustdeck-common = { path = "../rustdeck-common" }

base64 = { version = "0.22.1", default-features = false, features = [
  "alloc",
  "std",
], optional = true }
indexmap = { version = "2.9.0", default-features = false, features = [
  "rayon",
  "serde",
  "std",
] }
libloading = { version = "0.9.0", default-features = false, features = ["std"] }
parking_lot = { version = "0.12.4", default-features = false, features = [
  "deadlock_detection",
] }
rayon = { version = "1.10.0", default-features = false }
regex = { version = "1.11.1", default-features = false, features = [
  "perf",
  "std",
  "unicode",
] }
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
  "std",
] }
thiserror = { version = "2.0.12", default-features = false, features = ["std"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }

[features]
default = ["icon_store_b64"]
icon_store_b64 = ["dep:base64"]
