[package]
name = "rustdeck"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = { version = "0.22.1", optional = true}
indexmap = { version = "2.9.0", features = ["serde"] }
libloading = "0.8.5"
parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
regex = "1.11.1"
rustdeck-common = { path = "../rustdeck-common" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
default = ["icon_store_b64"]
icon_store_b64 = ["dep:base64"]
portable = []
