[package]
name = "rustdeck-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rustdeck = { path = "../../crates/rustdeck", default-features = false }

axum = { version = "0.8.4", default-features = false, features = [
  "http1",
  "json",
  "tokio",
  "tower-log",
  "tracing",
] }
serde = { version = "1.0.219", default-features = false, features = [
  "std",
  "derive",
] }
tokio = { version = "1.45.1", default-features = false }
tower-http = { version = "0.6.4", default-features = false, features = [
  "cors",
  "trace",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
  "std",
] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.19" }

[features]
default = ["icon_store_b64"]
icon_store_b64 = ["rustdeck/icon_store_b64"]
# Enables storing plugins and icons local to executable, instead of current working directory (cwd)
portable = []
